Copy HTML from wiki

--- a/appendices/resources/index.html
+++ b/appendices/resources/index.html
@@ -3,4 +3,137 @@ layout: area-appendices
 title: Other Resources
 type: A
 ---
-hi
+
+<h3>Information and Research</h3>
+
+<ul>
+    <li><b><a rel="nofollow" class="external free" href="http://JudoInfo.com">http://JudoInfo.com</a></b> The Judo Information Site</li>
+    <li><b><a rel="nofollow" class="external free" href="http://www.ippon.org/">http://www.ippon.org/</a></b> Tournament results</li>
+    <li><b><a rel="nofollow" class="external free" href="http://www.judoinside.com/">http://www.judoinside.com/</a></b></li>
+    <li><b><a rel="nofollow" class="external free" href="http://www.judoresearch.org/">http://www.judoresearch.org/</a></b> International Association of Judo Researchers</li>
+    <li><b><a rel="nofollow" class="external free" href="http://1423.isl-science.com/">http://1423.isl-science.com/</a></b> Archives of Budo</li>
+    <li><b><a rel="nofollow" class="external free" href="http://www.coachingjudo.com/">http://www.coachingjudo.com/</a></b> Judo Coaching Website</li>
+    <li><b><a rel="nofollow" class="external free" href="http://www.judometrics.com/">http://www.judometrics.com/</a></b>  Judo Metrics Website</li>
+    <li><b><a rel="nofollow" class="external free" href="http://www.judobase.org/">http://www.judobase.org/</a></b> World Rankings &amp; Events</li>
+</ul>
+
+<ul>
+    <li><b><a rel="nofollow" class="external free" href="http://www.jssm.org/">http://www.jssm.org/</a></b> Journal of Sports Science &amp; Medicine - occasionally has Judo related content</li>
+</ul>
+
+<h3>Multimedia</h3>
+
+<ul>
+    <li><b>Videos:</b> <a rel="nofollow" class="external free" href="http://www.judovision.org/">http://www.judovision.org/</a></li>
+    <li><b>Videos-2:</b> <a rel="nofollow" class="external free" href="http://www.judo-snijders.nl/">http://www.judo-snijders.nl/</a></li>
+    <li><b>Vidcast:</b> <a rel="nofollow" class="external free" href="http://superjudo.tv/">http://superjudo.tv/</a></li>
+    <li><b>IJF streaming:</b> <a rel="nofollow" class="external free" href="http://ippon.tv/">http://ippon.tv/</a></li>
+    <li><b>Podcast:</b> <a rel="nofollow" class="external free" href="http://thejudopodcast.com/">http://thejudopodcast.com/</a></li>
+    <li><b>Photos:</b> <a rel="nofollow" class="external free" href="http://www.judophotos.com/">http://www.judophotos.com/</a></li>
+    <li><b>Photos:</b> Flickr.com
+        <ul>
+            <li>Search for: <a rel="nofollow" class="external text" href="http://www.flickr.com/search/?q=judo+OR+j%C5%ABd%C5%8D+OR+%E6%9F%94%E9%81%93&amp;ct=0&amp;mt=all&amp;adv=1">judo OR jūdō OR 柔道</a></li>
+            <li>Group: <a rel="nofollow" class="external text" href="http://www.flickr.com/groups/thejudogroup/">The Judo Group</a></li>
+        </ul>
+    </li>
+</ul>
+
+<h3>Portal</h3>
+
+<ul>
+    <li><b><a rel="nofollow" class="external free" href="http://www.judo.com.gr">http://www.judo.com.gr</a></b></li>
+    <li><b><a rel="nofollow" class="external free" href="http://www.alljudo.net/">http://www.alljudo.net/</a></b> The french portal</li>
+</ul>
+
+<h3>Socialize</h3>
+
+<ul>
+    <li><b><a rel="nofollow" class="external free" href="http://www.reddit.com/r/judo">http://www.reddit.com/r/judo</a></b> English</li>
+    <li><b><a rel="nofollow" class="external free" href="http://judo.forumotion.co.uk/">http://judo.forumotion.co.uk/</a></b> English</li>
+    <li><b><a rel="nofollow" class="external free" href="http://www.judoforum.com/">http://www.judoforum.com/</a></b> English</li>
+    <li><b><a rel="nofollow" class="external free" href="http://www.judoforum.nl/">http://www.judoforum.nl/</a></b> Dutch</li>
+    <li><b><a rel="nofollow" class="external text" href="http://www.francejudo.com/modules.php?name=Forums">http://www.francejudo.com/</a></b> French</li>
+    <li><b><a rel="nofollow" class="external free" href="http://www.dasjudoforum.de/">http://www.dasjudoforum.de/</a></b> German</li>
+    <li><b><a rel="nofollow" class="external free" href="http://www.judoforum.gr/">http://www.judoforum.gr/</a></b> Greek</li>
+</ul>
+
+<ul>
+    <li><b><a rel="nofollow" class="external free" href="http://judoforum.com/index.php?automodule=blog">http://judoforum.com/index.php?automodule=blog</a></b> Judo Blogs</li>
+    <li><b><a rel="nofollow" class="external free" href="http://planetjudo.com/">http://planetjudo.com/</a></b> A collection of over 100 judo blogs</li>
+</ul>
+
+<h3>Magazines</h3>
+
+<ul>
+    <li><b><a rel="nofollow" class="external free" href="http://www.kokakids.co.uk/">http://www.kokakids.co.uk/</a></b> Koka Kids</li>
+    <li><b><a rel="nofollow" class="external free" href="http://www.usja-judo.org/GrowingJudo/index.htm">http://www.usja-judo.org/GrowingJudo/index.htm</a></b> Growing Judo</li>
+    <li><b><a rel="nofollow" class="external free" href="http://katana5.blogspot.com/">http://katana5.blogspot.com/</a></b> in Portuguese</li>
+</ul>
+
+<h3>Books</h3>
+
+<h4>General</h4>
+
+<ul>
+    <li><a href="/index.php/Best_Judo_(Book)" title="Best Judo (Book)">Best Judo</a> - <a href="/index.php?title=Isao_Inokuma&amp;action=edit&amp;redlink=1" class="new" title="Isao Inokuma (page does not exist)">Isao Inokuma</a> &amp; <a href="/index.php?title=Nobuyuki_Sato&amp;action=edit&amp;redlink=1" class="new" title="Nobuyuki Sato (page does not exist)">Nobuyuki Sato</a></li>
+    <li><a href="/index.php/The_Canon_of_Judo_(Book)" title="The Canon of Judo (Book)">Canon of Judo</a> - <a href="/index.php?title=Kyuzo_Mifune&amp;action=edit&amp;redlink=1" class="new" title="Kyuzo Mifune (page does not exist)">Kyuzo Mifune</a></li>
+    <li><a href="/index.php/Judo_Unleashed_(Book)" title="Judo Unleashed (Book)">Judo Unleashed</a> - <a href="/index.php?title=Neil_Ohlenkamp&amp;action=edit&amp;redlink=1" class="new" title="Neil Ohlenkamp (page does not exist)">Neil Ohlenkamp</a></li>
+    <li><a href="/index.php/Kodokan_Judo_(Book)" title="Kodokan Judo (Book)">Kodokan Judo</a> - <a href="/index.php/Jigor%C5%8D_Kan%C5%8D" title="Jigorō Kanō">Jigorō Kanō</a></li>
+    <li><a href="/index.php/K%C5%8Dd%C5%8Dkan_New_Japanese-English_Dictionary_of_Judo_(Book)" title="Kōdōkan New Japanese-English Dictionary of Judo (Book)">Kōdōkan New Japanese-English Dictionary of Judo</a> - <a href="/index.php/K%C5%8Dd%C5%8Dkan" title="Kōdōkan" class="mw-redirect">Kōdōkan</a></li>
+    <li><a href="/index.php/Mastering_Judo_(Book)" title="Mastering Judo (Book)">Mastering Judo</a> - <a href="/index.php?title=Masao_Takahashi&amp;action=edit&amp;redlink=1" class="new" title="Masao Takahashi (page does not exist)">Masao Takahashi</a></li>
+    <li><a href="/index.php/Mind_Over_Muscle_(Book)" title="Mind Over Muscle (Book)">Mind Over Muscle</a> - <a href="/index.php?title=Jigoro_Kano&amp;action=edit&amp;redlink=1" class="new" title="Jigoro Kano (page does not exist)">Jigoro Kano</a></li>
+    <li><a href="/index.php/The_Secrets_of_Judo_(Book)" title="The Secrets of Judo (Book)">The Secrets of Judo</a> - <a href="/index.php?title=Jiichi_Watanabe&amp;action=edit&amp;redlink=1" class="new" title="Jiichi Watanabe (page does not exist)">Jiichi Watanabe</a> &amp; <a href="/index.php?title=Lindy_Avakian&amp;action=edit&amp;redlink=1" class="new" title="Lindy Avakian (page does not exist)">Lindy Avakian</a></li>
+</ul>
+
+<h4>Throwing</h4>
+
+<ul>
+    <li><a href="/index.php/Kodokan_Judo_Throwing_Techniques_(Book)" title="Kodokan Judo Throwing Techniques (Book)">Kodokan Judo Throwing Techniques</a> - <a href="/index.php?title=Toshiro_Daigo&amp;action=edit&amp;redlink=1" class="new" title="Toshiro Daigo (page does not exist)">Toshiro Daigo</a></li>
+    <li><a href="/index.php/Ashiwaza_(Book)" title="Ashiwaza (Book)">Ashiwaza</a> - <a href="/index.php?title=Nobuyuki_Sat%C5%8D&amp;action=edit&amp;redlink=1" class="new" title="Nobuyuki Satō (page does not exist)">Nobuyuki Satō</a></li>
+    <li><a href="/index.php/Ashiwaza_II_(Book)" title="Ashiwaza II (Book)">Ashiwaza II</a> - <a href="/index.php?title=Michael_Swain&amp;action=edit&amp;redlink=1" class="new" title="Michael Swain (page does not exist)">Michael Swain</a></li>
+    <li><a href="/index.php/Harai-Goshi_(Book)" title="Harai-Goshi (Book)">Harai-Goshi</a> - <a href="/index.php?title=Jean-Luc_Rouge&amp;action=edit&amp;redlink=1" class="new" title="Jean-Luc Rouge (page does not exist)">Jean-Luc Rouge</a></li>
+    <li><a href="/index.php/Osoto-Gari_(Yasuhiro_Yamashita)(Book)" title="Osoto-Gari (Yasuhiro Yamashita)(Book)">Osoto-Gari</a> - <a href="/index.php/Yasuhiro_Yamashita" title="Yasuhiro Yamashita">Yasuhiro Yamashita</a></li>
+    <li><a href="/index.php/Pick-Ups_(Book)" title="Pick-Ups (Book)">Pick-Ups</a> - <a href="/index.php?title=Robert_Van_De_Walle&amp;action=edit&amp;redlink=1" class="new" title="Robert Van De Walle (page does not exist)">Robert Van De Walle</a></li>
+    <li><a href="/index.php/Seoi-nage_(Book)" title="Seoi-nage (Book)">Seoi-nage</a> - <a href="/index.php?title=Hidetoshi_Nakanishi&amp;action=edit&amp;redlink=1" class="new" title="Hidetoshi Nakanishi (page does not exist)">Hidetoshi Nakanishi</a></li>
+    <li><a href="/index.php/Tai-Otoshi_(Book)" title="Tai-Otoshi (Book)">Tai-Otoshi</a> - <a href="/index.php/Neil_Adams" title="Neil Adams">Neil Adams</a></li>
+    <li><a href="/index.php/Tomoe-nage_(Book)" title="Tomoe-nage (Book)">Tomoe-nage</a> - <a href="/index.php?title=Katsuhiko_Kashiwazaki&amp;action=edit&amp;redlink=1" class="new" title="Katsuhiko Kashiwazaki (page does not exist)">Katsuhiko Kashiwazaki</a></li>
+    <li><a href="/index.php/Uchimata_(Book)" title="Uchimata (Book)">Uchimata</a> - <a href="/index.php?title=Hitoshi_Sugai&amp;action=edit&amp;redlink=1" class="new" title="Hitoshi Sugai (page does not exist)">Hitoshi Sugai</a></li>
+</ul>
+
+<h4>Grappling</h4>
+
+<ul>
+    <li><a href="/index.php/Armlocks_(Book)" title="Armlocks (Book)">Armlocks</a> - <a href="/index.php/Neil_Adams" title="Neil Adams">Neil Adams</a></li>
+    <li><a href="/index.php/Osaekomi_(Book)" title="Osaekomi (Book)">Osaekomi</a> - <a href="/index.php?title=Katsuhiko_Kashiwazaki&amp;action=edit&amp;redlink=1" class="new" title="Katsuhiko Kashiwazaki (page does not exist)">Katsuhiko Kashiwazaki</a></li>
+    <li><a href="/index.php/Shimewaza_(Book)" title="Shimewaza (Book)">Shimewaza</a> - <a href="/index.php?title=Katsuhiko_Kashiwazaki&amp;action=edit&amp;redlink=1" class="new" title="Katsuhiko Kashiwazaki (page does not exist)">Katsuhiko Kashiwazaki</a></li>
+</ul>
+
+<h4>Forms</h4>
+
+<ul>
+    <li><a href="/index.php/Judo_Formal_Techniques_(Book)" title="Judo Formal Techniques (Book)">Judo Formal Techniques</a> - <a href="/index.php?title=Tadao_Otaki&amp;action=edit&amp;redlink=1" class="new" title="Tadao Otaki (page does not exist)">Tadao Otaki</a> &amp; <a href="/index.php?title=Donn_Draeger&amp;action=edit&amp;redlink=1" class="new" title="Donn Draeger (page does not exist)">Donn Draeger</a></li>
+    <li><a href="/index.php/Ju-No-Kata:_A_Kodokan_Textbook_(Book)" title="Ju-No-Kata: A Kodokan Textbook (Book)">Ju-No-Kata: A Kodokan Textbook</a> - <a href="/index.php/Keiko_Fukuda" title="Keiko Fukuda">Keiko Fukuda</a></li>
+</ul>
+
+<h4>Other</h4>
+
+<ul>
+    <li><a href="/index.php/Grips_(Book)" title="Grips (Book)">Grips</a> - <a href="/index.php/Neil_Adams" title="Neil Adams">Neil Adams</a></li>
+    <li><a href="/index.php/Judo_Training_Methods_(Book)" title="Judo Training Methods (Book)">Judo Training Methods</a> - <a href="/index.php?title=Takahiko_Ishikawa&amp;action=edit&amp;redlink=1" class="new" title="Takahiko Ishikawa (page does not exist)">Takahiko Ishikawa</a> &amp; <a href="/index.php?title=Donn_Draeger&amp;action=edit&amp;redlink=1" class="new" title="Donn Draeger (page does not exist)">Donn Draeger</a></li>
+    <li><a href="/index.php/Judo_Heart_%26_Soul_(Book)" title="Judo Heart &amp; Soul (Book)">Judo Heart &amp; Soul</a> - <a href="/index.php?title=Hayward_Nishioka&amp;action=edit&amp;redlink=1" class="new" title="Hayward Nishioka (page does not exist)">Hayward Nishioka</a></li>
+    <li><a href="/index.php/Advances_in_Judo_Biomechanics_Research_(Book)" title="Advances in Judo Biomechanics Research (Book)">Advances in Judo Biomechanics Research</a> - <a href="/index.php/Attilio_Sacripanti" title="Attilio Sacripanti">Attilio Sacripanti</a></li>
+</ul>
+
+<p>Find book reviews at <a rel="nofollow" class="external text" href="http://www.bestjudo.com/page/1358/judo-book-reviews-title">Best Judo</a></p>
+
+<p><a href="/index.php/Books" title="Books">List of books</a>
+
+<h3>Videos</h3>
+
+<h4>Grappling</h4>
+
+<ul>
+    <li><a href="/index.php/Judo_Katame_Waza:_Grappling_Training_Methods_(Video)" title="Judo Katame Waza: Grappling Training Methods (Video)">Judo Katame Waza</a> - <a href="/index.php?title=Komuro_Koji&amp;action=edit&amp;redlink=1" class="new" title="Komuro Koji (page does not exist)">Komuro Koji</a></li>
+</ul>
+
+
