--- a/content/competition/index.html
+++ b/content/competition/index.html
@@ -2,4 +2,199 @@
 layout: area-content
 area: Competition
 ---
-hi
+
+<div id="siteNotice">
+    <p>This section needs to be cleaned up! The information is outdated, the explanation between IJF rules and
+        Japan rules is also confusing!</p>
+
+    <p>--<a href="/index.php/User:Pat" title="User:Pat">Pat</a> 08:21, 15 February 2010 (UTC)</p>
+</div>
+
+<p><b>Competition</b>, also known as <a href="/index.php/Shiai" title="Shiai" class="mw-redirect">shiai</a> (<a
+            href="/index.php/%E8%A9%A6" title="試">試</a><a href="/index.php/%E5%90%88" title="合">合</a>), is a
+    good way to measure ones own ability. By competing, one can determine their own weaknesses and strengths.
+    This is why regular participation in competitions are necessary for improvement in judo.</p>
+
+<p><i>Note:</i> The rules differ between the <a href="/index.php/International_Judo_Federation"
+                                                title="International Judo Federation">International Judo
+    Federation</a> and <a href="http://en.wikipedia.org/wiki/Japan" class="extiw"
+                          title="wikipedia:Japan">Japan</a>. Some rules also differ between <a
+        href="/index.php/Organizations" title="Organizations" class="mw-redirect">organizations</a> as well.</p>
+
+<h3><a href="/index.php/Competition_(Points)"
+       title="Competition (Points)"
+       class="mw-redirect">Points</a></h3>
+
+<p>There are four scores in judo. An ippon (one point) is a winning score. A waza-ari (half point)
+    is near ippon. If the contestant is awarded two waza-ari, they will win by
+    waza-ari-awasete-ippon (two waza-ari make ippon).</p>
+
+<p>Yuko (effective), and koka (minor score) are different from waza-ari in that no amount of yuko or
+    koka will be equivelent to the next higer score. A yuko is better than a koka. One waza-ari is
+    better than any yuko and one yuko is better than any koka.</p>
+
+<p>If the match is not decided by an ippon, then it will be decided based on who has better scores.</p>
+
+<div style="text-align:right">[ <b><a href="/index.php/Competition_(Points)"
+                                      title="Competition (Points)" class="mw-redirect">More</a></b>
+    ]
+</div>
+
+
+<h3><span class="mw-headline" id="Penalties_.26_Prohibited_Acts"><a
+        href="/index.php/Competition_(Penalties_%26_Prohibited_Acts)"
+        title="Competition (Penalties &amp; Prohibited Acts)" class="mw-redirect">Penalties &amp;
+    Prohibited Acts</a></span></h3>
+
+<p>Penalties are important in competition in order to keep all competitors safe and in the spirit of
+    judo. There are also penalties to keep players from being too passive or overly defensive. As
+    long as the contestant plays good, safe judo, and does not stall, they shouldn't get any
+    penalties.</p>
+
+<p>There are four penalties given in judo (from least to most severe): shido, chui, keikoku, and
+    hansoku-make. However, starting in 2003, <a href="/index.php/International_Judo_Federation"
+                                                title="International Judo Federation">International
+        Judo Federation</a> simplified the rules to use only shido and hansoku-make. Once a
+    contestant recieves hansoku-make, the contestant is disqualified and excluded from the
+    tournament.</p>
+
+<div style="text-align:right">[ <b><a href="/index.php/Competition_(Penalties_%26_Prohibited_Acts)"
+                                      title="Competition (Penalties &amp; Prohibited Acts)"
+                                      class="mw-redirect">More</a></b> ]
+</div>
+
+
+
+<h3><span class="mw-headline" id="Equivalence">Equivalence</span></h3>
+
+<table cellspacing="1" cellpadding="4"
+       style="position:relative;text-align:center;width:100%;border:1px solid #aaa; border-collapse: separate; border-spacing: 1px;">
+
+    <tbody>
+    <tr>
+        <th style="background:#eee">Translation</th>
+        <td style="background:#fff;border:1px solid #E6F8F5">Minor Score</td>
+        <td style="background:#E6F8F5;border:1px solid #BFECE4">Effective</td>
+        <td style="background:#BFECE4;border:1px solid #80DACA">Near Ippon</td>
+        <td style="background:#80DACA;border:1px solid #40C6AF">Two Waza-ari make an Ippon</td>
+        <td style="background:#80DACA;border:1px solid #40C6AF">One Point</td>
+    </tr>
+    <tr>
+        <th style="background:#ddd">Score</th>
+        <td style="background:#80DACA">Koka (効果)</td>
+        <td style="background:#40C6AF">Yuko (有効)</td>
+        <td style="background:#00B394">Waza-ari (技あり)</td>
+        <td style="background:#00987E"><b>Waza-ari-awasete-ippon (技あり合わせて一本)</b></td>
+        <td style="background:#00987E"><b>Ippon (一本)</b></td>
+    </tr>
+    <tr>
+        <td style="background:#ddd"><b><a href="/index.php/International_Judo_Federation" title="International Judo Federation">IJF</a></b></td>
+        <td style="background:#FCED8C">1<sup>st</sup> Shido</td>
+        <td style="background:#FAD286">2<sup>nd</sup> Shido</td>
+        <td style="background:#F7A78E">3<sup>rd</sup> Shido</td>
+        <td rowspan="2" colspan="2" style="background:#F7979C;vertical-align:bottom;text-align:right">Hansoku-make (反則負け)</td>
+    </tr>
+    <tr>
+        <td style="background:#ddd"><b>Japan</b></td>
+        <td style="background:#FCED8C">Shido (指導)</td>
+        <td style="background:#FAD286">Chui (注意)</td>
+        <td style="background:#F7A78E">Keikoku (警告)</td>
+    </tr>
+    <tr>
+        <td style="background:#eee"><b>Translation</b></td>
+        <td style="background:#FFFCE8;border:1px solid #FDF5C5">Guidance</td>
+        <td style="background:#FEF6E7;border:1px solid #FCE8C2">Warning</td>
+        <td style="background:#FEEEE9;border:1px solid #FBD3C6">Serious Warning</td>
+        <td colspan="2" style="background:#FEEBEC;border:1px solid #FACBCD;text-align:right">Defeat by Decision</td>
+    </tr>
+    </tbody>
+</table>
+
+
+
+<h3><a href="/index.php?title=Competition_(Scoreboard_%26_Clock)&amp;action=edit&amp;redlink=1" class="new"
+       title="Competition (Scoreboard &amp; Clock) (page does not exist)">Scoreboard</a></h3>
+
+<a
+        href="/index.php/File:International_Judo_Federation_(Referee_Rules_2003)_manual_scoreboards.png"
+        class="image" title="Example scoreboard"><img alt="Example scoreboard"
+                                                      src="/images/thumb/0/04/International_Judo_Federation_%28Referee_Rules_2003%29_manual_scoreboards.png/300px-International_Judo_Federation_%28Referee_Rules_2003%29_manual_scoreboards.png"
+                                                      width="300" height="117"
+                                                      srcset="/images/thumb/0/04/International_Judo_Federation_%28Referee_Rules_2003%29_manual_scoreboards.png/450px-International_Judo_Federation_%28Referee_Rules_2003%29_manual_scoreboards.png 1.5x, /images/0/04/International_Judo_Federation_%28Referee_Rules_2003%29_manual_scoreboards.png 2x"></a>
+
+<p>To the right is an example scoreboard. Notice it displays the score for each contestant, and if there is
+    a penalty. In this example, blue has a penalty equivelent to yuko.</p>
+
+<div style="text-align:right">[ <b><a
+        href="/index.php?title=Competition_(Scoreboard_%26_Clock)&amp;action=edit&amp;redlink=1" class="new"
+        title="Competition (Scoreboard &amp; Clock) (page does not exist)">More</a></b> ]
+</div>
+
+
+<h3><a href="/index.php/Competition_(Competition_Area)"
+       title="Competition (Competition Area)">Competition Area</a></h3>
+
+<p>The competition area is divided in to 3 zones: the contest area, danger zone, and the safety area. Inside
+    the contest are are two strips which denotes were the contestants bow at the beginning and end of the
+    match.</p>
+
+<div style="text-align:right">[ <b><a href="/index.php/Competition_(Competition_Area)"
+                                      title="Competition (Competition Area)">More</a></b> ]
+</div>
+
+<a
+            href="/index.php/File:International_Judo_Federation_(Referee_Rules_2003)_competition_area.png"
+            class="image" title="Competition area diagram"><img alt="Competition area diagram"
+                                                                src="/images/thumb/b/b8/International_Judo_Federation_%28Referee_Rules_2003%29_competition_area.png/578px-International_Judo_Federation_%28Referee_Rules_2003%29_competition_area.png"
+                                                                width="578" height="233"
+                                                                srcset="/images/b/b8/International_Judo_Federation_%28Referee_Rules_2003%29_competition_area.png 1.5x, /images/b/b8/International_Judo_Federation_%28Referee_Rules_2003%29_competition_area.png 2x"></a>
+
+
+<h3><span class="mw-headline" id="Judo_Uniform"><a href="/index.php/Competition_(Judogi)"
+                                                   title="Competition (Judogi)">Judo
+    Uniform</a></span></h3>
+
+<p>Contestants must wear a judogi which is in good clean condition. The gi must be dry and without
+    odor. Female contestants must also wear a plain white or off-white short sleeve t-shirt which is
+    long enough to be tucked in to the pants.</p>
+
+<p>In international competition, the first contestant wears blue and the second wears white or
+    off-white. Local competitions usually have different rules such as one contestant wearing a red
+    belt and the other wearing a white belt.</p>
+
+<div style="text-align:right">[ <b><a href="/index.php/Competition_(Judogi)" title="Competition (Judogi)">More</a></b> ]</div>
+
+
+<h3><span class="mw-headline" id="Hygiene">Hygiene</span></h3>
+
+<p>Every contestant should also have good hygiene. Nails of the hands and feet should be cut short.
+    If the contestant has long hair, then it should be tied so it won't cause any inconvenience.</p>
+
+
+<h2>The Basics</h2>
+
+<ul>
+    <li><a href="/index.php/Competition_Overview" title="Competition Overview" class="mw-redirect">Competition Overview</a></li>
+    <li><a href="/index.php?title=Points_%26_Penalties&amp;action=edit&amp;redlink=1" class="new" title="Points &amp; Penalties (page does not exist)">Points &amp; Penalties</a></li>
+    <li><a href="/index.php?title=Tournament_formats&amp;action=edit&amp;redlink=1" class="new" title="Tournament formats (page does not exist)">Tournament formats</a></li>
+    <li><a href="/index.php?title=Uniform_regulations&amp;action=edit&amp;redlink=1" class="new" title="Uniform regulations (page does not exist)">Uniform regulations</a></li>
+    <li><a href="/index.php?title=Competition_area&amp;action=edit&amp;redlink=1" class="new" title="Competition area (page does not exist)">Competition area</a></li>
+    <li><a href="/index.php?title=Referee_calls&amp;action=edit&amp;redlink=1" class="new" title="Referee calls (page does not exist)">Referee calls</a></li>
+</ul>
+
+<h2>References</h2>
+
+<ul>
+    <li>"<a rel="nofollow" class="external text" href="http://www.ijf.org/rule/rule_referee.php">IJF Referee
+        Rules</a>."<i> <a href="/index.php/International_Judo_Federation" title="International Judo Federation">International
+        Judo Federation</a></i>. Accessed on August 5, 2005.
+    </li>
+</ul>
+
+<h2>See Also</h2>
+
+<ul>
+    <li><a href="/index.php/International_Judo_Federation_(Contest_Rules_-_2003)" title="International Judo Federation (Contest Rules - 2003)">International Judo Federation (Contest Rules - 2003)</a></li>
+    <li><a href="/index.php/Competition_Rulebook" title="Competition Rulebook">Competition Rulebook</a></li>
+    <li><a href="/index.php/Tournaments" title="Tournaments">Tournaments</a></li>
+</ul>
