--- a/content/forms/index.html
+++ b/content/forms/index.html
@@ -2,4 +2,117 @@
 layout: area-content
 area: Forms
 ---
-hi
+
+<p>There are many forms in Judo which are most commonly known as <b>Kata</b>
+    (<a href="/index.php/%E5%BD%A2" title="形">形</a>). It can also be written with the kanji
+    (<a href="/index.php?title=%E5%9E%8B&amp;action=edit&amp;redlink=1" class="new"
+        title="型 (page does not exist)">型</a>) however this is an older way of writing it.<sup
+            id="cite_ref-1" class="reference"><a href="#cite_note-1">[1]</a></sup></p>
+
+<h2>Formal Kata</h2>
+
+<p>As defined by the <a href="/index.php/K%C5%8Dd%C5%8Dkan_Judo_Institute" title="Kōdōkan Judo Institute"
+                        class="mw-redirect">Kōdōkan Judo Institute</a>.<sup id="cite_ref-2" class="reference"><a
+        href="#cite_note-2">[2]</a></sup></p>
+
+<table class="waza">
+    <tbody>
+    <tr class="wazaLabels">
+        <td><a href="/index.php/Hepburn_romanization" title="Hepburn romanization">Romanization</a></td>
+        <td>Translation</td>
+    </tr>
+    <tr>
+        <td class="wazaRoman"><a href="/index.php/Nage-no-kata" title="Nage-no-kata">Nage-no-kata</a></td>
+        <td class="wazaTrans">Throwing forms</td>
+    </tr>
+    <tr>
+        <td class="wazaRoman"><a href="/index.php/Katame-no-kata" title="Katame-no-kata">Katame-no-kata</a></td>
+        <td class="wazaTrans">Grappling forms</td>
+    </tr>
+    <tr>
+        <td class="wazaRoman"><a href="/index.php/Kime-no-kata" title="Kime-no-kata">Kime-no-kata</a></td>
+        <td class="wazaTrans">Combat forms</td>
+    </tr>
+    <tr>
+        <td class="wazaRoman"><a href="/index.php/J%C5%AB-no-kata" title="Jū-no-kata">Jū-no-kata</a></td>
+        <td class="wazaTrans">Forms of gentleness</td>
+    </tr>
+    <tr>
+        <td class="wazaRoman"><a href="/index.php/K%C5%8Dd%C5%8Dkan-goshin-jutsu" title="Kōdōkan-goshin-jutsu">Kōdōkan-goshin-jutsu</a></td>
+        <td class="wazaTrans">Kōdōkan self-defense forms</td>
+    </tr>
+    <tr>
+        <td class="wazaRoman"><a href="/index.php/Itsutsu-no-kata" title="Itsutsu-no-kata">Itsutsu-no-kata</a></td>
+        <td class="wazaTrans">Five forms</td>
+    </tr>
+    <tr>
+        <td class="wazaRoman"><a href="/index.php/Ko-shiki-no-kata" title="Ko-shiki-no-kata">Ko-shiki-no-kata</a></td>
+        <td class="wazaTrans">Classical/antique forms</td>
+    </tr>
+    <tr>
+        <td class="wazaRoman"><a href="/index.php/Seiryoku-zen%27y%C5%8D-kokumin-taiiku"
+                                 title="Seiryoku-zen'yō-kokumin-taiiku">Seiryoku-zen'yō-kokumin-taiiku</a></td>
+        <td class="wazaTrans">Maximum-efficiency national physical education</td>
+    </tr>
+    </tbody>
+</table>
+
+
+<h2>Other Kata</h2>
+
+<p>These are either rarely practiced or were not developed by the Kodokan.</p>
+
+<table class="waza">
+    <tbody>
+    <tr class="wazaLabels">
+        <td><a href="/index.php/Hepburn_romanization" title="Hepburn romanization">Romanization</a></td>
+        <td>Translation</td>
+    </tr>
+    <tr>
+        <td class="wazaRoman"><a href="/index.php/Joshi-j%C5%ABd%C5%8D-goshin-h%C5%8D" title="Joshi-jūdō-goshin-hō">Joshi-jūdō-goshin-hō</a></td>
+        <td class="wazaTrans">Jūdō directives of self-defence for girls</td>
+    </tr>
+    <tr>
+        <td class="wazaRoman"><a href="/index.php/Go-no-kata" title="Go-no-kata">Go-no-kata</a></td>
+        <td class="wazaTrans">Forms of hardness</td>
+    </tr>
+    <tr>
+        <td class="wazaRoman"><a href="/index.php/Kaeshi-no-kata" title="Kaeshi-no-kata">Kaeshi-no-kata</a></td>
+        <td class="wazaTrans">Reversal forms</td>
+    </tr>
+    <tr>
+        <td class="wazaRoman"><a href="/index.php/Renkoho" title="Renkoho">Renkoho</a></td>
+        <td class="wazaTrans">Arresting Techniques</td>
+    </tr>
+    <tr>
+        <td class="wazaRoman"><a href="/index.php/Kime-shiki" title="Kime-shiki">Kime-shiki</a></td>
+        <td class="wazaTrans">Forms of decision</td>
+    </tr>
+    <tr>
+        <td class="wazaRoman"><a href="/index.php/Go-no-sen-no-kata" title="Go-no-sen-no-kata">Go-no-sen-no-kata</a></td>
+        <td class="wazaTrans">Forms of counter attack</td>
+    </tr>
+    <tr>
+        <td class="wazaRoman"><a href="/index.php/Shobu-no-kata" title="Shobu-no-kata">Shobu-no-kata</a></td>
+        <td class="wazaTrans">Forms of Contest</td>
+    </tr>
+    <tr>
+        <td class="wazaRoman"><a href="/index.php/Nage-ura-no-kata" title="Nage-ura-no-kata">Nage-ura-no-kata</a></td>
+        <td class="wazaTrans">Throwing counter forms</td>
+    </tr>
+    </tbody>
+</table>
+
+<h2>References</h2>
+
+<ol class="references">
+    <li id="cite_note-1"><span class="mw-cite-backlink"><a href="#cite_ref-1"><span class="cite-accessibility-label">Jump up </span>↑</a></span>
+        <span class="reference-text"><a rel="nofollow" class="external free"
+                                        href="http://JudoForum.com/index.php?/topic/17841-shobu-no-kata/page__view__findpost__p__595827">http://JudoForum.com/index.php?/topic/17841-shobu-no-kata/page__view__findpost__p__595827</a></span>
+    </li>
+    <li id="cite_note-2"><span class="mw-cite-backlink"><a href="#cite_ref-2"><span class="cite-accessibility-label">Jump up </span>↑</a></span>
+        <span class="reference-text"><a rel="nofollow" class="external free"
+                                        href="http://www.kodokan.org/e_basic/kata.html">http://www.kodokan.org/e_basic/kata.html</a></span>
+    </li>
+</ol>
+
