--- a/content/history/index.html
+++ b/content/history/index.html
@@ -2,4 +2,72 @@
 layout: area-content
 area: History
 ---
-hi
+<h2>People</h2>
+<ul>
+    <li><a href="/index.php?title=Mohamed_Fouad&amp;action=edit&amp;redlink=1" class="new" title="Mohamed Fouad (page does not exist)">Mohamed Fouad</a>, Egypt</li>
+    <li><a href="/index.php/Alexander_Iatskevich" title="Alexander Iatskevich">Alexander Iatskevich</a>, Soviet Union</li>
+    <li><a href="/index.php?title=Alexey_Budylin&amp;action=edit&amp;redlink=1" class="new" title="Alexey Budylin (page does not exist)">Alexey Budylin</a>, Estonia</li>
+    <li><a href="/index.php?title=Andres_Lutsar&amp;action=edit&amp;redlink=1" class="new" title="Andres Lutsar (page does not exist)">Andres Lutsar</a>, Estonia</li>
+    <li><a href="/index.php?title=Angelique_Seriese&amp;action=edit&amp;redlink=1" class="new" title="Angelique Seriese (page does not exist)">Angelique Seriese</a>, Netherlands</li>
+    <li><a href="/index.php/Angelo_Parisi" title="Angelo Parisi">Angelo Parisi</a>, Great Britain - France</li>
+    <li><a href="/index.php/Anton_Geesink" title="Anton Geesink">Anton Geesink</a>, Netherlands</li>
+    <li><a href="/index.php?title=Ben_Campbell&amp;action=edit&amp;redlink=1" class="new" title="Ben Campbell (page does not exist)">Ben Campbell</a></li>
+    <li><a href="/index.php/Brian_Jacks" title="Brian Jacks">Brian Jacks</a>, Great Britain</li>
+    <li><a href="/index.php/Brigitte_Deydier" title="Brigitte Deydier">Brigitte Deydier</a>, France</li>
+    <li><a href="/index.php/Cecile_Nowak" title="Cecile Nowak">Cecile Nowak</a></li>
+    <li><a href="/index.php?title=Chang-Su_Lee&amp;action=edit&amp;redlink=1" class="new" title="Chang-Su Lee (page does not exist)">Chang-Su Lee</a>, Korea</li>
+    <li><a href="/index.php/Craig_Fallon" title="Craig Fallon">Craig Fallon</a>, Great Britain</li>
+    <li><a href="/index.php/Dave_Starbrook" title="Dave Starbrook">Dave Starbrook</a>, Great Britain</li>
+    <li><a href="/index.php/David_Douillet" title="David Douillet">David Douillet</a>, France</li>
+    <li><a href="/index.php?title=Diane_Bell&amp;action=edit&amp;redlink=1" class="new" title="Diane Bell (page does not exist)">Diane Bell</a>, Great Britain</li>
+    <li><a href="/index.php/Don_Draeger" title="Don Draeger">Don Draeger</a></li>
+    <li><a href="/index.php?title=Doug_Rogers&amp;action=edit&amp;redlink=1" class="new" title="Doug Rogers (page does not exist)">Doug Rogers</a></li>
+    <li><a href="/index.php/E.J._Harrison" title="E.J. Harrison">E.J. Harrison</a></li>
+    <li><a href="/index.php?title=Emanuela_Pierantozzi&amp;action=edit&amp;redlink=1" class="new" title="Emanuela Pierantozzi (page does not exist)">Emanuela Pierantozzi</a>, Italy</li>
+    <li><a href="/index.php/Ezio_Gamba" title="Ezio Gamba">Ezio Gamba</a>, Italy</li>
+    <li><a href="/index.php?title=Fenglian_Gao&amp;action=edit&amp;redlink=1" class="new" title="Fenglian Gao (page does not exist)">Fenglian Gao</a>, China</li>
+    <li><a href="/index.php/Frank_Wieneke" title="Frank Wieneke">Frank Wieneke</a>, Germany</li>
+    <li><a href="/index.php?title=Henry_Stone&amp;action=edit&amp;redlink=1" class="new" title="Henry Stone (page does not exist)">Henry Stone</a></li>
+    <li><a href="/index.php/Hidehiko_Yoshida" title="Hidehiko Yoshida">Hidehiko Yoshida</a></li>
+    <li><a href="/index.php?title=Ingrid_Berghmans&amp;action=edit&amp;redlink=1" class="new" title="Ingrid Berghmans (page does not exist)">Ingrid Berghmans</a>, Belgium</li>
+    <li><a href="/index.php/Isao_Okano" title="Isao Okano">Isao Okano</a>, Japan</li>
+    <li><a href="/index.php?title=Indrek_Pertelson&amp;action=edit&amp;redlink=1" class="new" title="Indrek Pertelson (page does not exist)">Indrek Pertelson</a>, Estonia</li>
+    <li><a href="/index.php/Jean_Luc_Rouge" title="Jean Luc Rouge">Jean Luc Rouge</a>, France</li>
+    <li><a href="/index.php/Jigor%C5%8D_Kan%C5%8D" title="Jigorō Kanō">Jigorō Kanō</a>, Japan</li>
+    <li><a href="/index.php?title=Kaimu_Keerak&amp;action=edit&amp;redlink=1" class="new" title="Kaimu Keerak (page does not exist)">Kaimu Keerak</a>, Estonia</li>
+    <li><a href="/index.php/Kaminaga_Akio" title="Kaminaga Akio">Kaminaga Akio</a>, Japan</li>
+    <li><a href="/index.php/Karen_Briggs" title="Karen Briggs">Karen Briggs</a>, Great Britain</li>
+    <li><a href="/index.php/Kashuhiko_Kashiwazaki" title="Kashuhiko Kashiwazaki">Kashuhiko Kashiwazaki</a>, Japan</li>
+    <li><a href="/index.php?title=Kate_Howey&amp;action=edit&amp;redlink=1" class="new" title="Kate Howey (page does not exist)">Kate Howey</a>, Great Britain</li>
+    <li><a href="/index.php/Keiko_Fukuda" title="Keiko Fukuda">Keiko Fukuda</a>, Japan</li>
+    <li><a href="/index.php?title=Ki-Young_Jeon&amp;action=edit&amp;redlink=1" class="new" title="Ki-Young Jeon (page does not exist)">Ki-Young Jeon</a>, Korea</li>
+    <li><a href="/index.php?title=Komuro_Koji&amp;action=edit&amp;redlink=1" class="new" title="Komuro Koji (page does not exist)">Komuro Koji</a>, Japan</li>
+    <li><a href="/index.php/Kosei_Inoue" title="Kosei Inoue">Kosei Inoue</a>, Japan</li>
+    <li><a href="/index.php?title=Makoto_Takimoto&amp;action=edit&amp;redlink=1" class="new" title="Makoto Takimoto (page does not exist)">Makoto Takimoto</a>, Japan</li>
+    <li><a href="/index.php?title=Marie-Claire_Restoux&amp;action=edit&amp;redlink=1" class="new" title="Marie-Claire Restoux (page does not exist)">Marie-Claire Restoux</a>, France</li>
+    <li><a href="/index.php/Mike_Swain" title="Mike Swain">Mike Swain</a>, USA</li>
+    <li><a href="/index.php/Mikonosuke_Kawaishi" title="Mikonosuke Kawaishi">Mikonosuke Kawaishi</a>, Japan</li>
+    <li><a href="/index.php?title=Musahiko_Kimura&amp;action=edit&amp;redlink=1" class="new" title="Musahiko Kimura (page does not exist)">Musahiko Kimura</a>, Japan</li>
+    <li><a href="/index.php/Neil_Adams" title="Neil Adams">Neil Adams</a>, Great Britain</li>
+    <li><a href="/index.php/Nicolai_Soloduchin" title="Nicolai Soloduchin">Nicolai Soloduchin</a>, Soviet Union</li>
+    <li><a href="/index.php/Nobuyuki_Saito" title="Nobuyuki Saito">Nobuyuki Saito</a>, Japan</li>
+    <li><a href="/index.php?title=Peter_Cousins&amp;action=edit&amp;redlink=1" class="new" title="Peter Cousins (page does not exist)">Peter Cousins</a>, Great Britain</li>
+    <li><a href="/index.php/Peter_Seisenbacher" title="Peter Seisenbacher">Peter Seisenbacher</a>, Austria</li>
+    <li><a href="/index.php/Robert_Van_de_Walle" title="Robert Van de Walle">Robert Van de Walle</a>, Belgium</li>
+    <li><a href="/index.php?title=Ryoko_Tani&amp;action=edit&amp;redlink=1" class="new" title="Ryoko Tani (page does not exist)">Ryoko Tani</a></li>
+    <li><a href="/index.php?title=Rusty_Kanokogi&amp;action=edit&amp;redlink=1" class="new" title="Rusty Kanokogi (page does not exist)">Rusty Kanokogi</a></li>
+    <li><a href="/index.php/Sergei_Aschwanden" title="Sergei Aschwanden">Sergei Aschwanden</a>, Switzerland</li>
+    <li><a href="/index.php?title=Sharon_Rendle&amp;action=edit&amp;redlink=1" class="new" title="Sharon Rendle (page does not exist)">Sharon Rendle</a>, Great Britain</li>
+    <li><a href="/index.php/Shiro_Saigo" title="Shiro Saigo">Shiro Saigo</a>, Japan</li>
+    <li><a href="/index.php/Shota_Khabarelli" title="Shota Khabarelli">Shota Khabarelli</a>, Soviet Union</li>
+    <li><a href="/index.php/Shozo_Fujii" title="Shozo Fujii">Shozo Fujii</a>, Japan</li>
+    <li><a href="/index.php/Sumio_Endo" title="Sumio Endo">Sumio Endo</a>, Japan</li>
+    <li><a href="/index.php/Tokio_Hirano" title="Tokio Hirano">Tokio Hirano</a>, Japan</li>
+    <li><a href="/index.php/Toshihiko_Koga" title="Toshihiko Koga">Toshihiko Koga</a>, Japan</li>
+    <li><a href="/index.php?title=Vladimir_Nevzerov&amp;action=edit&amp;redlink=1" class="new" title="Vladimir Nevzerov (page does not exist)">Vladimir Nevzerov</a></li>
+    <li><a href="/index.php/Waldemar_Legien" title="Waldemar Legien">Waldemar Legien</a>, Poland</li>
+    <li><a href="/index.php/Wilhelm_Ruska" title="Wilhelm Ruska">Wilhelm Ruska</a>, Netherlands</li>
+    <li><a href="/index.php/Yoshiaki_Yamashita" title="Yoshiaki Yamashita">Yoshiaki Yamashita</a></li>
+    <li><a href="/index.php/Yasuhiro_Yamashita" title="Yasuhiro Yamashita">Yasuhiro Yamashita</a>, Japan</li>
+</ul>
+
